# keychainpgp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/keychainpgp-cli/src/commands/: generate.rs  keys.rs
crates/keychainpgp-core/src/: engine.rs  sequoia_engine.rs  types.rs
crates/keychainpgp-keys/: Cargo.toml
crates/keychainpgp-keys/src/: credential.rs  keyring.rs  storage.rs  sync.rs
crates/keychainpgp-keys/src/network/: keyserver.rs  wkd.rs
crates/keychainpgp-keys/tests/: integration.rs
crates/keychainpgp-ui/: Cargo.toml
crates/keychainpgp-ui/capabilities/: default.json  mobile.json
crates/keychainpgp-ui/frontend/: package-lock.json  package.json
crates/keychainpgp-ui/frontend/messages/: ar.json  de.json  en.json  es.json  fr.json  he.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  zh-CN.json  zh-TW.json
crates/keychainpgp-ui/frontend/scripts/: sync-translations.cjs  sync-translations.test.cjs
crates/keychainpgp-ui/frontend/src/: App.svelte  app.css
crates/keychainpgp-ui/frontend/src/components/home/: ComposeInput.svelte  HomeView.svelte
crates/keychainpgp-ui/frontend/src/components/keys/: KeyCard.svelte  KeyGenerateForm.svelte  KeysView.svelte
crates/keychainpgp-ui/frontend/src/components/modals/: ConfirmDialog.svelte  DonateModal.svelte  ErrorDialog.svelte  KeyDetailsModal.svelte  KeyDiscoveryModal.svelte  KeyImportDialog.svelte  KeySyncExportModal.svelte  KeySyncImportModal.svelte  PublishPromptModal.svelte  QrExportModal.svelte  RevokeKeyModal.svelte
crates/keychainpgp-ui/frontend/src/components/onboarding/: OnboardingView.svelte
crates/keychainpgp-ui/frontend/src/components/settings/: SettingsView.svelte
crates/keychainpgp-ui/frontend/src/components/shared/: QrScanOverlay.svelte  ScanProgressBar.svelte
crates/keychainpgp-ui/frontend/src/lib/: qr-scan.ts  tauri.ts  types.ts
crates/keychainpgp-ui/frontend/src/lib/stores/: settings.svelte.ts
crates/keychainpgp-ui/src/: lib.rs
crates/keychainpgp-ui/src/commands/: crypto.rs  keys.rs  settings.rs  sync.rs
scripts/: bump-version.ps1  bump-version.sh  install-hooks.ps1  install-hooks.sh
web/: package-lock.json  package.json
web/src/lib/: keystore.ts
