[package]
name = "keychainpgp-ui"
description = "Tauri desktop and mobile application for KeychainPGP"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "keychainpgp-ui"

[lib]
name = "keychainpgp_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keychainpgp-core.workspace = true
keychainpgp-keys.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true
zeroize.workspace = true
qrcode.workspace = true
reqwest.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keychainpgp-clipboard.workspace = true
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
